feat: add example

--- a/examples/basic.html
+++ b/examples/basic.html
@@ -2,7 +2,11 @@
 <head>
   <script src="../adppend.js"></script>
   <script>
-  adppend('p').append('Awesome advertisement video')
+  document.onreadystatechange = function () {
+    if (document.readyState === 'complete') {
+      adppend('p').append('Awesome advertisement video')
+    }
+  }
   </script>
 </head>
 <body>
